--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-.jekyll-metadata
-*.gem
-.bundle
-.sass-cache
 _site
-_drafts
-Gemfile.lock
-.DS_Store
-**/.DS_Store
+.sass-cache
+.jekyll-metadata
+
+\.DS_Store
