--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,24 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Lucas N. Ribeiro's website
+email: lucasnogrib@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Lucas N. Ribeiro's personal website
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://lnribeiro.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+timezone: America/Fortaleza
+
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+
+# Google Analytics
+google_analytics: UA-124242145-1
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
