research and teaching

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-redirect-from
 
 # Google Analytics
 google_analytics: UA-124242145-1
