--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: Lucas N. Ribeiro's website
 email: lucasnogrib@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Lucas N. Ribeiro's personal website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://lnribeiro.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 timezone: America/Fortaleza
-
 
 # Build settings
 markdown: kramdown
@@ -28,9 +26,8 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-redirect-from
 
-# Google Analytics
+# Google Analyticsbui
 google_analytics: UA-124242145-1
 
 # Exclude from processing.
