fix mixed content error

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Lucas N. Ribeiro
 email: lucasnogrib@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://lnribeiro.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://lnribeiro.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 timezone: America/Fortaleza
 
 # Build settings
